{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 94,
  "lineage": "10ee1064-f85d-6dd0-7fa9-022fa63f7b02",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_dc_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/bf44f0f2-7074-429a-8228-1ed755e05026/resourceGroups/rg_Dev_TF_SPSEonAz_01/providers/Microsoft.Network/networkInterfaces/NIC-vm-DC-0",
            "internal_domain_name_suffix": "3waj4kmbc1tu5j04kudvo0mceb.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.1.1.4",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/bf44f0f2-7074-429a-8228-1ed755e05026/resourceGroups/rg_Dev_TF_SPSEonAz_01/providers/Microsoft.Network/publicIPAddresses/PublicIP-vm-DC",
                "subnet_id": "/subscriptions/bf44f0f2-7074-429a-8228-1ed755e05026/resourceGroups/rg_Dev_TF_SPSEonAz_01/providers/Microsoft.Network/virtualNetworks/rg-Dev-TF-SPSEonAz-01-vnet/subnets/Subnet-vm-DC"
              }
            ],
            "location": "westeurope",
            "name": "NIC-vm-DC-0",
            "private_ip_address": "10.1.1.4",
            "private_ip_addresses": [
              "10.1.1.4"
            ],
            "resource_group_name": "rg_Dev_TF_SPSEonAz_01"
          },
          "dependencies": [
            "azurerm_public_ip.pip_dc",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet_dc",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_sp_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/bf44f0f2-7074-429a-8228-1ed755e05026/resourceGroups/rg_Dev_TF_SPSEonAz_01/providers/Microsoft.Network/networkInterfaces/NIC-vm-SP-0",
            "internal_domain_name_suffix": "3waj4kmbc1tu5j04kudvo0mceb.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.1.3.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/bf44f0f2-7074-429a-8228-1ed755e05026/resourceGroups/rg_Dev_TF_SPSEonAz_01/providers/Microsoft.Network/publicIPAddresses/PublicIP-vm-SP",
                "subnet_id": "/subscriptions/bf44f0f2-7074-429a-8228-1ed755e05026/resourceGroups/rg_Dev_TF_SPSEonAz_01/providers/Microsoft.Network/virtualNetworks/rg-Dev-TF-SPSEonAz-01-vnet/subnets/Subnet-vm-SP"
              }
            ],
            "location": "westeurope",
            "name": "NIC-vm-SP-0",
            "private_ip_address": "10.1.3.4",
            "private_ip_addresses": [
              "10.1.3.4"
            ],
            "resource_group_name": "rg_Dev_TF_SPSEonAz_01"
          },
          "dependencies": [
            "azurerm_public_ip.pip_sp",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet_sp",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_sql_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/bf44f0f2-7074-429a-8228-1ed755e05026/resourceGroups/rg_Dev_TF_SPSEonAz_01/providers/Microsoft.Network/networkInterfaces/NIC-vm-SQL-0",
            "internal_domain_name_suffix": "3waj4kmbc1tu5j04kudvo0mceb.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.1.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/bf44f0f2-7074-429a-8228-1ed755e05026/resourceGroups/rg_Dev_TF_SPSEonAz_01/providers/Microsoft.Network/publicIPAddresses/PublicIP-vm-SQL",
                "subnet_id": "/subscriptions/bf44f0f2-7074-429a-8228-1ed755e05026/resourceGroups/rg_Dev_TF_SPSEonAz_01/providers/Microsoft.Network/virtualNetworks/rg-Dev-TF-SPSEonAz-01-vnet/subnets/Subnet-vm-SQL"
              }
            ],
            "location": "westeurope",
            "name": "NIC-vm-SQL-0",
            "private_ip_address": "10.1.2.4",
            "private_ip_addresses": [
              "10.1.2.4"
            ],
            "resource_group_name": "rg_Dev_TF_SPSEonAz_01"
          },
          "dependencies": [
            "azurerm_public_ip.pip_sql",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet_sql",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_subnet_dc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bf44f0f2-7074-429a-8228-1ed755e05026/resourceGroups/rg_Dev_TF_SPSEonAz_01/providers/Microsoft.Network/networkSecurityGroups/NSG-Subnet-vm-DC",
            "location": "westeurope",
            "name": "NSG-Subnet-vm-DC",
            "resource_group_name": "rg_Dev_TF_SPSEonAz_01",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_subnet_sp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bf44f0f2-7074-429a-8228-1ed755e05026/resourceGroups/rg_Dev_TF_SPSEonAz_01/providers/Microsoft.Network/networkSecurityGroups/NSG-Subnet-vm-SP",
            "location": "westeurope",
            "name": "NSG-Subnet-vm-SP",
            "resource_group_name": "rg_Dev_TF_SPSEonAz_01",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_subnet_sql",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bf44f0f2-7074-429a-8228-1ed755e05026/resourceGroups/rg_Dev_TF_SPSEonAz_01/providers/Microsoft.Network/networkSecurityGroups/NSG-Subnet-vm-SQL",
            "location": "westeurope",
            "name": "NSG-Subnet-vm-SQL",
            "resource_group_name": "rg_Dev_TF_SPSEonAz_01",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rdp_rule_subnet_dc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Allow RDP",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/bf44f0f2-7074-429a-8228-1ed755e05026/resourceGroups/rg_Dev_TF_SPSEonAz_01/providers/Microsoft.Network/networkSecurityGroups/NSG-Subnet-vm-DC/securityRules/allow-rdp-rule",
            "name": "allow-rdp-rule",
            "network_security_group_name": "NSG-Subnet-vm-DC",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "rg_Dev_TF_SPSEonAz_01",
            "source_address_prefix": "Internet",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg_subnet_dc",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rdp_rule_subnet_sp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Allow RDP",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/bf44f0f2-7074-429a-8228-1ed755e05026/resourceGroups/rg_Dev_TF_SPSEonAz_01/providers/Microsoft.Network/networkSecurityGroups/NSG-Subnet-vm-SP/securityRules/allow-rdp-rule",
            "name": "allow-rdp-rule",
            "network_security_group_name": "NSG-Subnet-vm-SP",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "rg_Dev_TF_SPSEonAz_01",
            "source_address_prefix": "Internet",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg_subnet_sp",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rdp_rule_subnet_sql",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Allow RDP",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/bf44f0f2-7074-429a-8228-1ed755e05026/resourceGroups/rg_Dev_TF_SPSEonAz_01/providers/Microsoft.Network/networkSecurityGroups/NSG-Subnet-vm-SQL/securityRules/allow-rdp-rule",
            "name": "allow-rdp-rule",
            "network_security_group_name": "NSG-Subnet-vm-SQL",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "rg_Dev_TF_SPSEonAz_01",
            "source_address_prefix": "Internet",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg_subnet_sql",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip_dc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "rg-dev-tf-spseonaz-01-vm-dc",
            "fqdn": "rg-dev-tf-spseonaz-01-vm-dc.westeurope.cloudapp.azure.com",
            "id": "/subscriptions/bf44f0f2-7074-429a-8228-1ed755e05026/resourceGroups/rg_Dev_TF_SPSEonAz_01/providers/Microsoft.Network/publicIPAddresses/PublicIP-vm-DC",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "PublicIP-vm-DC",
            "resource_group_name": "rg_Dev_TF_SPSEonAz_01",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip_sp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "rg-dev-tf-spseonaz-01-vm-sp",
            "fqdn": "rg-dev-tf-spseonaz-01-vm-sp.westeurope.cloudapp.azure.com",
            "id": "/subscriptions/bf44f0f2-7074-429a-8228-1ed755e05026/resourceGroups/rg_Dev_TF_SPSEonAz_01/providers/Microsoft.Network/publicIPAddresses/PublicIP-vm-SP",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "PublicIP-vm-SP",
            "resource_group_name": "rg_Dev_TF_SPSEonAz_01",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip_sql",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "rg-dev-tf-spseonaz-01-vm-sql",
            "fqdn": "rg-dev-tf-spseonaz-01-vm-sql.westeurope.cloudapp.azure.com",
            "id": "/subscriptions/bf44f0f2-7074-429a-8228-1ed755e05026/resourceGroups/rg_Dev_TF_SPSEonAz_01/providers/Microsoft.Network/publicIPAddresses/PublicIP-vm-SQL",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "PublicIP-vm-SQL",
            "resource_group_name": "rg_Dev_TF_SPSEonAz_01",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_dc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/bf44f0f2-7074-429a-8228-1ed755e05026/resourceGroups/rg_Dev_TF_SPSEonAz_01/providers/Microsoft.Network/virtualNetworks/rg-Dev-TF-SPSEonAz-01-vnet/subnets/Subnet-vm-DC",
            "name": "Subnet-vm-DC",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg_Dev_TF_SPSEonAz_01",
            "virtual_network_name": "rg-Dev-TF-SPSEonAz-01-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_sp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/bf44f0f2-7074-429a-8228-1ed755e05026/resourceGroups/rg_Dev_TF_SPSEonAz_01/providers/Microsoft.Network/virtualNetworks/rg-Dev-TF-SPSEonAz-01-vnet/subnets/Subnet-vm-SP",
            "name": "Subnet-vm-SP",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg_Dev_TF_SPSEonAz_01",
            "virtual_network_name": "rg-Dev-TF-SPSEonAz-01-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_sql",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/bf44f0f2-7074-429a-8228-1ed755e05026/resourceGroups/rg_Dev_TF_SPSEonAz_01/providers/Microsoft.Network/virtualNetworks/rg-Dev-TF-SPSEonAz-01-vnet/subnets/Subnet-vm-SQL",
            "name": "Subnet-vm-SQL",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg_Dev_TF_SPSEonAz_01",
            "virtual_network_name": "rg-Dev-TF-SPSEonAz-01-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_subnetdc_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bf44f0f2-7074-429a-8228-1ed755e05026/resourceGroups/rg_Dev_TF_SPSEonAz_01/providers/Microsoft.Network/virtualNetworks/rg-Dev-TF-SPSEonAz-01-vnet/subnets/Subnet-vm-DC",
            "network_security_group_id": "/subscriptions/bf44f0f2-7074-429a-8228-1ed755e05026/resourceGroups/rg_Dev_TF_SPSEonAz_01/providers/Microsoft.Network/networkSecurityGroups/NSG-Subnet-vm-DC",
            "subnet_id": "/subscriptions/bf44f0f2-7074-429a-8228-1ed755e05026/resourceGroups/rg_Dev_TF_SPSEonAz_01/providers/Microsoft.Network/virtualNetworks/rg-Dev-TF-SPSEonAz-01-vnet/subnets/Subnet-vm-DC"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg_subnet_dc",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet_dc",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_subnetsp_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bf44f0f2-7074-429a-8228-1ed755e05026/resourceGroups/rg_Dev_TF_SPSEonAz_01/providers/Microsoft.Network/virtualNetworks/rg-Dev-TF-SPSEonAz-01-vnet/subnets/Subnet-vm-SP",
            "network_security_group_id": "/subscriptions/bf44f0f2-7074-429a-8228-1ed755e05026/resourceGroups/rg_Dev_TF_SPSEonAz_01/providers/Microsoft.Network/networkSecurityGroups/NSG-Subnet-vm-SP",
            "subnet_id": "/subscriptions/bf44f0f2-7074-429a-8228-1ed755e05026/resourceGroups/rg_Dev_TF_SPSEonAz_01/providers/Microsoft.Network/virtualNetworks/rg-Dev-TF-SPSEonAz-01-vnet/subnets/Subnet-vm-SP"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg_subnet_sp",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet_sp",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_subnetsql_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bf44f0f2-7074-429a-8228-1ed755e05026/resourceGroups/rg_Dev_TF_SPSEonAz_01/providers/Microsoft.Network/virtualNetworks/rg-Dev-TF-SPSEonAz-01-vnet/subnets/Subnet-vm-SQL",
            "network_security_group_id": "/subscriptions/bf44f0f2-7074-429a-8228-1ed755e05026/resourceGroups/rg_Dev_TF_SPSEonAz_01/providers/Microsoft.Network/networkSecurityGroups/NSG-Subnet-vm-SQL",
            "subnet_id": "/subscriptions/bf44f0f2-7074-429a-8228-1ed755e05026/resourceGroups/rg_Dev_TF_SPSEonAz_01/providers/Microsoft.Network/virtualNetworks/rg-Dev-TF-SPSEonAz-01-vnet/subnets/Subnet-vm-SQL"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg_subnet_sql",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet_sql",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "299f80ed-1681-4fe7-a75e-550757698221",
            "id": "/subscriptions/bf44f0f2-7074-429a-8228-1ed755e05026/resourceGroups/rg_Dev_TF_SPSEonAz_01/providers/Microsoft.Network/virtualNetworks/rg-Dev-TF-SPSEonAz-01-vnet",
            "location": "westeurope",
            "name": "rg-Dev-TF-SPSEonAz-01-vnet",
            "resource_group_name": "rg_Dev_TF_SPSEonAz_01"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}